Fix spacing and isDiscover on group privacy

--- a/futurenhs.app/assets/scss/modules/group-privacy/_group-privacy.scss
+++ b/futurenhs.app/assets/scss/modules/group-privacy/_group-privacy.scss
@@ -1,6 +1,6 @@
 .c-group-privacy {
     &__icon {
-        vertical-align: middle;
+        margin-bottom: -2px;
     }
     &__header {
         display: inline;
